--- a/style.css
+++ b/style.css
@@ -144,13 +144,13 @@ img {
 
 #portfolio-title {
   color: #F0FFF0;
-  border: solid 2px White;
+
   width: 20%;
   text-align: center;
   margin: 0 auto;
   margin-top: 30px;
   font-family: "Montserrat", sans-serif;
-  font-size: .9rem;
+  font-size: 2rem;
 }
 
 #projects-container{
